force-app/main/default/objects/Custom_Chatter_Mapping__c/Custom_Chatter_Mapping__c.object-meta.xml
<CustomObject>
    <label>Chatter</label>
    <nameField>
        <displayFormat>{DD}-{MM}-{YYYY}-{0}</displayFormat>
        <label>CustomChatter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>