force-app/main/default/objects/Custom_Chatter_Mapping__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Parent_Id__c , &apos;Approval&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval</label>
    <type>Text</type>
</CustomField>