force-app/main/default/objects/Custom_Chatter_Mapping__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Chatter</relationshipLabel>
    <relationshipName>Chatter</relationshipName>
    <type>Lookup</type>
</CustomField>