force-app/main/default/objects/Custom_Chatter_Mapping__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>